--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <section id="home">
+            <h1>Home</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eos dolores id aperiam rerum sunt.</p>
+        </section>
+        <section id="about">
+            <h1>About</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eos dolores id aperiam rerum sunt.</p>
+        </section>
+        <section id="services">
+            <h1>Services</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eos dolores id aperiam rerum sunt.</p>
+        </section>
+        <section id="contact">
+            <h1>Contact</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eos dolores id aperiam rerum sunt.</p>
+        </section>
+    </div>
+</body>
+</html>
