--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -15,10 +16,18 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <div class="menu-btn">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
         </nav>
         <section id="home">
-            <h1>Home</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eos dolores id aperiam rerum sunt.</p>
+            <div class="home-content">
+                <div class="text1">Hi!</div>
+                <div class="text2">I'm Jatin</div>
+                <div class="text2">And I am a <span>Researcher</span></div>
+            </div>
         </section>
         <section id="about">
             <h1>About</h1>
@@ -33,5 +42,8 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eos dolores id aperiam rerum sunt.</p>
         </section>
     </div>
+    <script src="script.js"></script>
+    
 </body>
+
 </html>
