added responsive about page

--- a/index.html
+++ b/index.html
@@ -30,8 +30,17 @@
             </div>
         </section>
         <section id="about">
-            <h1>About</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eos dolores id aperiam rerum sunt.</p>
+            <div class="title">About Me</div>
+            <div class="about-body">
+                <div class="my-img">
+                    <img src="imgs/IMG-20190616-WA0006-01.jpeg"></img:src>
+                </div>
+                <div class="seperator"></div>
+                <div class="info">
+                    <div class="info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad iure dignissimos aliquid soluta magni praesentium tenetur suscipit fugiat repellendus veniam debitis natus illum, recusandae eveniet perspiciatis nam ex voluptatibus doloremque possimus molestiae officiis vero aut. Consequuntur eum facilis ipsam ab corrupti praesentium at amet enim quaerat minima repellat, id, ex architecto pariatur totam quo blanditiis, dolore repellendus et. Ipsam iusto alias perspiciatis necessitatibus, ipsa delectus ipsum nulla placeat totam aliquam dicta optio dolor iste sapiente unde cupiditate voluptatum autem itaque ad corrupti expedita minus voluptatibus? Aut in exercitationem quas sapiente recusandae? Enim repudiandae alias eum unde maiores soluta nostrum itaque?</div>
+                    <div class="dwnld-cv">Download CV</div>
+                </div>
+            </div>
         </section>
         <section id="services">
             <h1>Services</h1>
