--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.5/typed.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#projects">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -26,7 +27,7 @@
             <div class="home-content">
                 <div class="text1">Hi!</div>
                 <div class="text2">I'm Jatin</div>
-                <div class="text2">And I am a <span>Researcher</span></div>
+                <div class="text2">And I am a <span class="typing-anim"></span></div>
             </div>
         </section>
         <section id="about">
@@ -42,7 +43,7 @@
                 </div>
             </div>
         </section>
-        <section id="services">
+        <section id="projects">
             <h1>Services</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eos dolores id aperiam rerum sunt.</p>
         </section>
