bug fixes in research page

--- a/index.html
+++ b/index.html
@@ -106,17 +106,15 @@
         <section id="research">
             <div class="title">Research</div>
             <div class="research-body">
-                <div class="carousel owl-carousel">
+                <div class="research-carousel owl-carousel">
                     <div class="card">
                         <div class="card-body">
-                            <div class="paper-title">Paper 1.</div>
-                            <div class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet alias ab
-                                ratione, quod doloribus quae optio dolorum voluptatum animi soluta ea saepe expedita
-                                cupiditate, sint nulla ex magni a mollitia! Perspiciatis amet accusantium,
-                                numquam totam, similique dolorum libero magni facilis facere fuga earum soluta. Voluptatem
-                                molestias suscipit iusto ipsum, quasi corrupti molestiae eius. Harum error minus expedita
-                                repudiandae maxime distinctio quia vero cupiditate,
-                                rerum unde sed ad. Id molestiae ea, dolores totam optio eveniet facere?
+                            <div class="paper-title">Pattern Prediction using LSTM and ReLU Ensemble</div>
+                            <div class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam velit
+                                unde, vero ab, quos nemo sapiente alias, dolor eligendi iusto nisi illo ut esse amet
+                                officiis ad doloremque. Amet doloremque unde, facilis molestias eaque tenetur odit enim
+                                earum cumque, incidunt aut ullam corporis eum quibusdam mollitia tempora voluptatum
+                                nostrum omnis.
                             </div>
                             <div class="card-btns">
                                 <img src="imgs/paper-icon.png" class="paper-icon">
@@ -126,12 +124,14 @@
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <div class="paper-title">Paper 2</div>
+                            <div class="paper-title">Finetuning for Cyberbullying </div>
                             <div class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet alias ab
                                 ratione, quod doloribus quae optio dolorum voluptatum animi soluta ea saepe expedita
                                 cupiditate, sint nulla ex magni a mollitia! Perspiciatis amet accusantium,
-                                numquam totam, similique dolorum libero magni facilis facere fuga earum soluta. Voluptatem
-                                molestias suscipit iusto ipsum, quasi corrupti molestiae eius. Harum error minus expedita
+                                numquam totam, similique dolorum libero magni facilis facere fuga earum soluta.
+                                Voluptatem
+                                molestias suscipit iusto ipsum, quasi corrupti molestiae eius. Harum error minus
+                                expedita
                                 repudiandae maxime distinctio quia vero cupiditate,
                                 rerum unde sed ad. Id molestiae ea, dolores totam optio eveniet facere?
                             </div>
