projects page basic layout

--- a/index.html
+++ b/index.html
@@ -145,8 +145,15 @@
             </div>
         </section>
         <section id="projects">
-            <h1>Projects</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam eos dolores id aperiam rerum sunt.</p>
+            <div class="title">Projects</div>
+            <div class="projects-body">
+                <div class="project-types">
+                    <div class="mldl">ML/DL</div>
+                    <div class="appdev">App Dev</div>
+                    <div class="webdev">Web Dev</div>
+                    <div class="miscprojects">Misc</div>
+                </div>
+            </div>
         </section>
         <section id="contact">
             <h1>Contact</h1>
