basic layouting of projects page + js scripting for project type change

--- a/index.html
+++ b/index.html
@@ -141,6 +141,25 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="paper-title">Review on NLP Techniques</div>
+                            <div class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet alias ab
+                                ratione, quod doloribus quae optio dolorum voluptatum animi soluta ea saepe expedita
+                                cupiditate, sint nulla ex magni a mollitia! Perspiciatis amet accusantium,
+                                numquam totam, similique dolorum libero magni facilis facere fuga earum soluta.
+                                Voluptatem
+                                molestias suscipit iusto ipsum, quasi corrupti molestiae eius. Harum error minus
+                                expedita
+                                repudiandae maxime distinctio quia vero cupiditate,
+                                rerum unde sed ad. Id molestiae ea, dolores totam optio eveniet facere?
+                            </div>
+                            <div class="card-btns">
+                                <img src="imgs/paper-icon.png" class="paper-icon">
+                                <img src="imgs/GitHub-logo.png" class="github-icon">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -153,6 +172,10 @@
                     <div class="webdev">Web Dev</div>
                     <div class="miscprojects">Misc</div>
                 </div>
+                <div class="mldlbody", id="mldlbody">ML DL</div>
+                <div class="appdevbody" id="appdevbody">App Dev</div>
+                <div class="webdevbody" id="webdevbody">Web Dev</div>
+                <div class="miscbody" id="miscbody">Misc</div>
             </div>
         </section>
         <section id="contact">
