projects sections responsive layout done

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
+    <script src="https://kit.fontawesome.com/3502057dff.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="container">
         <nav class="navbar">
@@ -115,8 +116,12 @@
                                 nostrum omnis.
                             </div>
                             <div class="card-btns">
-                                <img src="imgs/paper-icon.png" class="paper-icon">
-                                <img src="imgs/GitHub-logo.png" class="github-icon">
+                                <span class="paper-icon">
+                                    <i class="fas fa-scroll"></i>
+                                </span>
+                                <span class="github-icon">
+                                    <i class="fab fa-github-square"></i>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -134,8 +139,12 @@
                                 rerum unde sed ad. Id molestiae ea, dolores totam optio eveniet facere?
                             </div>
                             <div class="card-btns">
-                                <img src="imgs/paper-icon.png" class="paper-icon">
-                                <img src="imgs/GitHub-logo.png" class="github-icon">
+                                <span class="paper-icon">
+                                    <i class="fas fa-scroll"></i>
+                                </span>
+                                <span class="github-icon">
+                                    <i class="fab fa-github-square"></i>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -153,8 +162,12 @@
                                 rerum unde sed ad. Id molestiae ea, dolores totam optio eveniet facere?
                             </div>
                             <div class="card-btns">
-                                <img src="imgs/paper-icon.png" class="paper-icon">
-                                <img src="imgs/GitHub-logo.png" class="github-icon">
+                                <span class="paper-icon">
+                                    <i class="fas fa-scroll"></i>
+                                </span>
+                                <span class="github-icon">
+                                    <i class="fab fa-github-square"></i>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -170,7 +183,67 @@
                     <div class="webdev">Web Dev</div>
                     <div class="miscprojects">Misc</div>
                 </div>
-                <div class="mldlbody", id="mldlbody">ML DL</div>
+                <div class="mldlbody" , id="mldlbody">
+                    <div class="mldl-carousel owl-carousel">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="project-title">
+                                    ML DL 1
+                                </div>
+                                <div class="project-desc">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam praesentium sunt
+                                    maxime error excepturi aliquam vitae repellat quibusdam pariatur corrupti recusandae
+                                    qui aliquid asperiores neque tempora labore a, harum vel adipisci quis, accusantium
+                                    est provident veritatis. Dignissimos maiores, tenetur earum mollitia laboriosam
+                                    velit non, commodi nemo, recusandae modi ad ut.
+                                </div>
+                                <div class="card-btns">
+                                    <span class="github-icon">
+                                        <i class="fab fa-github-square"></i>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="project-title">
+                                    ML DL 2
+                                </div>
+                                <div class="project-desc">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam praesentium sunt
+                                    maxime error excepturi aliquam vitae repellat quibusdam pariatur corrupti recusandae
+                                    qui aliquid asperiores neque tempora labore a, harum vel adipisci quis, accusantium
+                                    est provident veritatis. Dignissimos maiores, tenetur earum mollitia laboriosam
+                                    velit non, commodi nemo, recusandae modi ad ut.
+                                </div>
+                                <div class="card-btns">
+                                    <span class="github-icon">
+                                        <i class="fab fa-github-square"></i>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="project-title">
+                                    ML DL 3
+                                </div>
+                                <div class="project-desc">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam praesentium sunt
+                                    maxime error excepturi aliquam vitae repellat quibusdam pariatur corrupti recusandae
+                                    qui aliquid asperiores neque tempora labore a, harum vel adipisci quis, accusantium
+                                    est provident veritatis. Dignissimos maiores, tenetur earum mollitia laboriosam
+                                    velit non, commodi nemo, recusandae modi ad ut.
+                                </div>
+                                <div class="card-btns">
+                                    <span class="github-icon">
+                                        <i class="fab fa-github-square"></i>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="appdevbody" id="appdevbody">App Dev</div>
                 <div class="webdevbody" id="webdevbody">Web Dev</div>
                 <div class="miscbody" id="miscbody">Misc</div>
