added kawaii potats

--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="potats-img">
+                                <img width="833px" height="958px" src="imgs/kawaii_pots_grey.jpg"></img:src>
+                            </div>
+                            <div class="wait-for-more">
+                                Please look at this potato while i build more stuff
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -242,6 +252,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="potats-img">
+                                    <img width="833px" height="958px" src="imgs/kawaii_pots_grey.jpg"></img:src>
+                                </div>
+                                <div class="wait-for-more">
+                                    Please look at this potato while i build more stuff
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="appdevbody" id="appdevbody">
@@ -303,6 +323,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="potats-img">
+                                    <img width="833px" height="958px" src="imgs/kawaii_pots_grey.jpg"></img:src>
+                                </div>
+                                <div class="wait-for-more">
+                                    Please look at this potato while i build more stuff
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="webdevbody" id="webdevbody">
@@ -361,6 +391,16 @@
                                     <span class="github-icon">
                                         <i class="fab fa-github-square"></i>
                                     </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="potats-img">
+                                    <img width="833px" height="958px" src="imgs/kawaii_pots_grey.jpg"></img:src>
+                                </div>
+                                <div class="wait-for-more">
+                                    Please look at this potato while i build more stuff
                                 </div>
                             </div>
                         </div>
@@ -460,6 +500,16 @@
                                     <span class="github-icon">
                                         <i class="fab fa-github-square"></i>
                                     </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="potats-img">
+                                    <img width="833px" height="958px" src="imgs/kawaii_pots_grey.jpg"></img:src>
+                                </div>
+                                <div class="wait-for-more">
+                                    Please look at this potato while i build more stuff
                                 </div>
                             </div>
                         </div>
