added content in reseacrh page

--- a/index.html
+++ b/index.html
@@ -109,18 +109,26 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="paper-title">Pattern Prediction using LSTM and ReLU Ensemble</div>
-                            <div class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam velit
-                                unde, vero ab, quos nemo sapiente alias, dolor eligendi iusto nisi illo ut esse amet
-                                officiis ad doloremque. Amet doloremque unde, facilis molestias eaque tenetur odit enim
-                                earum cumque, incidunt aut ullam corporis eum quibusdam mollitia tempora voluptatum
-                                nostrum omnis.
+                            <div class="summary">
+                                A work mainly intiaed to find the patterns occuring in the daily activities of humans.
+                                The work uses LSTM which has demostrated having significant skill in being able to
+                                remember context and history in NLP. This model performed extermely well and gave an
+                                accuracy of 80%.
+                                <br>
+                                <br>
+                                This work got accepted in the ICICC-2020 conference and was further published in SSRN
                             </div>
                             <div class="card-btns">
                                 <span class="paper-icon">
-                                    <i class="fas fa-scroll"></i>
+                                    <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3569584"
+                                        target="_blank">
+                                        <i class="fas fa-scroll"></i>
+                                    </a>
                                 </span>
                                 <span class="github-icon">
-                                    <i class="fab fa-github-square"></i>
+                                    <a href="https://github.com/jatinkarthik-tripathy/RPS-Demo" target="_blank">
+                                        <i class="fab fa-github-square"></i>
+                                    </a>
                                 </span>
                             </div>
                         </div>
@@ -128,22 +136,24 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="paper-title">Finetuning for Cyberbullying </div>
-                            <div class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet alias ab
-                                ratione, quod doloribus quae optio dolorum voluptatum animi soluta ea saepe expedita
-                                cupiditate, sint nulla ex magni a mollitia! Perspiciatis amet accusantium,
-                                numquam totam, similique dolorum libero magni facilis facere fuga earum soluta.
-                                Voluptatem
-                                molestias suscipit iusto ipsum, quasi corrupti molestiae eius. Harum error minus
-                                expedita
-                                repudiandae maxime distinctio quia vero cupiditate,
-                                rerum unde sed ad. Id molestiae ea, dolores totam optio eveniet facere?
+                            <div class="summary">
+                                To offer a stand against cyberbullying, this work uses more recent advancements in the
+                                field of NLP like the ALBERT model for the use of finetuning classifcations of hate
+                                speech found online. Fine tuned on of the largest dataset containing hate speec, the
+                                ALBERT based fine tuning apprach gave an F1 score of 95%.
+                                <br>
+                                <br>
+                                This work has been accepted in Springer Multimedia Systems
                             </div>
                             <div class="card-btns">
-                                <span class="paper-icon">
+                                <!-- <span class="paper-icon">
                                     <i class="fas fa-scroll"></i>
-                                </span>
+                                </span> -->
                                 <span class="github-icon">
-                                    <i class="fab fa-github-square"></i>
+                                    <a href="https://github.com/jatinkarthik-tripathy/CyberBullying-Senti-Analysis"
+                                        target="_blank">
+                                        <i class="fab fa-github-square"></i>
+                                    </a>
                                 </span>
                             </div>
                         </div>
@@ -151,22 +161,23 @@
                     <div class="card">
                         <div class="card-body">
                             <div class="paper-title">Review on NLP Techniques</div>
-                            <div class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet alias ab
-                                ratione, quod doloribus quae optio dolorum voluptatum animi soluta ea saepe expedita
-                                cupiditate, sint nulla ex magni a mollitia! Perspiciatis amet accusantium,
-                                numquam totam, similique dolorum libero magni facilis facere fuga earum soluta.
-                                Voluptatem
-                                molestias suscipit iusto ipsum, quasi corrupti molestiae eius. Harum error minus
-                                expedita
-                                repudiandae maxime distinctio quia vero cupiditate,
-                                rerum unde sed ad. Id molestiae ea, dolores totam optio eveniet facere?
+                            <div class="summary">
+                                This review paper discusses the different approaches that are used for the sequence to
+                                sequence mapping in Natural Language Processing. From the inception of the field to more
+                                recent advances such as large pretrained models
+                                <br>
+                                <br>
+                                Work done for Undergradute Research Experience and working for the Artificial
+                                Intelligence Research Lab VIT-AP
                             </div>
                             <div class="card-btns">
-                                <span class="paper-icon">
+                                <!-- <span class="paper-icon">
                                     <i class="fas fa-scroll"></i>
-                                </span>
+                                </span> -->
                                 <span class="github-icon">
-                                    <i class="fab fa-github-square"></i>
+                                    <a href="https://github.com/jatinkarthik-tripathy/Chatbot" target="_blank">
+                                        <i class="fab fa-github-square"></i>
+                                    </a>
                                 </span>
                             </div>
                         </div>
