--- a/index.html
+++ b/index.html
@@ -125,17 +125,12 @@
                                         <i class="fas fa-scroll"></i>
                                     </a>
                                 </span>
-                                <span class="github-icon">
-                                    <a href="https://github.com/jatinkarthik-tripathy/RPS-Demo" target="_blank">
-                                        <i class="fab fa-github-square"></i>
-                                    </a>
-                                </span>
                             </div>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-body">
-                            <div class="paper-title">Finetuning for Cyberbullying </div>
+                            <div class="paper-title">Finetuning for Cyberbullying</div>
                             <div class="summary">
                                 To offer a stand against cyberbullying, this work uses more recent advancements in the
                                 field of NLP like the ALBERT model for the use of finetuning classifcations of hate
@@ -149,12 +144,6 @@
                                 <!-- <span class="paper-icon">
                                     <i class="fas fa-scroll"></i>
                                 </span> -->
-                                <span class="github-icon">
-                                    <a href="https://github.com/jatinkarthik-tripathy/CyberBullying-Senti-Analysis"
-                                        target="_blank">
-                                        <i class="fab fa-github-square"></i>
-                                    </a>
-                                </span>
                             </div>
                         </div>
                     </div>
@@ -164,21 +153,17 @@
                             <div class="summary">
                                 This review paper discusses the different approaches that are used for the sequence to
                                 sequence mapping in Natural Language Processing. From the inception of the field to more
-                                recent advances such as large pretrained models
+                                recent advances such as large pretrained models.
                                 <br>
                                 <br>
-                                Work done for Undergradute Research Experience and working for the Artificial
-                                Intelligence Research Lab VIT-AP
+                                Work done for Undergradute Research Experience course and while working for the
+                                Artificial
+                                Intelligence Research Lab, VIT-AP.
                             </div>
                             <div class="card-btns">
                                 <!-- <span class="paper-icon">
                                     <i class="fas fa-scroll"></i>
                                 </span> -->
-                                <span class="github-icon">
-                                    <a href="https://github.com/jatinkarthik-tripathy/Chatbot" target="_blank">
-                                        <i class="fab fa-github-square"></i>
-                                    </a>
-                                </span>
                             </div>
                         </div>
                     </div>
@@ -209,18 +194,19 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="project-title">
-                                    ML DL 1
+                                    ALBERT Finetuning
                                 </div>
                                 <div class="project-desc">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam praesentium sunt
-                                    maxime error excepturi aliquam vitae repellat quibusdam pariatur corrupti recusandae
-                                    qui aliquid asperiores neque tempora labore a, harum vel adipisci quis, accusantium
-                                    est provident veritatis. Dignissimos maiores, tenetur earum mollitia laboriosam
-                                    velit non, commodi nemo, recusandae modi ad ut.
+                                    Accompanying code for the research work. Uses the ALBERT-Large Architecture for the
+                                    finetuning of the data gathered by Dan et al 2017. This large pretrained model
+                                    finetuning methodolgy beats other state-of-the-art approaches like CNN/GRU and BERT
                                 </div>
                                 <div class="card-btns">
                                     <span class="github-icon">
-                                        <i class="fab fa-github-square"></i>
+                                        <a href="https://github.com/jatinkarthik-tripathy/CyberBullying-Senti-Analysis"
+                                            target="_blank">
+                                            <i class="fab fa-github-square"></i>
+                                        </a>
                                     </span>
                                 </div>
                             </div>
@@ -228,18 +214,21 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="project-title">
-                                    ML DL 2
+                                    Pattern Prediction
                                 </div>
                                 <div class="project-desc">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam praesentium sunt
-                                    maxime error excepturi aliquam vitae repellat quibusdam pariatur corrupti recusandae
-                                    qui aliquid asperiores neque tempora labore a, harum vel adipisci quis, accusantium
-                                    est provident veritatis. Dignissimos maiores, tenetur earum mollitia laboriosam
-                                    velit non, commodi nemo, recusandae modi ad ut.
+                                    Accompanying code for the research work. Explores the usage of a deep LSTM stack to
+                                    provide more
+                                    paramters
+                                    for better training. The dataset used consists of Rock-Paper-Sciscors games played
+                                    by
+                                    two humans. A history length of 9 games was set due to hardware restictions.
                                 </div>
                                 <div class="card-btns">
                                     <span class="github-icon">
-                                        <i class="fab fa-github-square"></i>
+                                        <a href="https://github.com/jatinkarthik-tripathy/RPS-Demo" target="_blank">
+                                            <i class="fab fa-github-square"></i>
+                                        </a>
                                     </span>
                                 </div>
                             </div>
@@ -247,18 +236,38 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="project-title">
-                                    ML DL 3
+                                    Chatbots
                                 </div>
                                 <div class="project-desc">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam praesentium sunt
-                                    maxime error excepturi aliquam vitae repellat quibusdam pariatur corrupti recusandae
-                                    qui aliquid asperiores neque tempora labore a, harum vel adipisci quis, accusantium
-                                    est provident veritatis. Dignissimos maiores, tenetur earum mollitia laboriosam
-                                    velit non, commodi nemo, recusandae modi ad ut.
+                                    A series of difference chatbots implemented using various technologies such as,
+                                    RNNs, LSTMs, Seq2Seq models, various attenion mechanisms, to test the efficiency of
+                                    the methodology and test the amount of data required for training. Training was
+                                    mostly done using ~400Gb of scrapped reddit comments
                                 </div>
                                 <div class="card-btns">
                                     <span class="github-icon">
-                                        <i class="fab fa-github-square"></i>
+                                        <a href="https://github.com/jatinkarthik-tripathy/Chatbot" target="_blank">
+                                            <i class="fab fa-github-square"></i>
+                                        </a>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="project-title">
+                                    HRV Analysis
+                                </div>
+                                <div class="project-desc">
+                                    An analysis of Heart Rate Variability (HRV) for the classification of stress levels.
+                                    Uses kNN for classification as well as Manhattan as the metirc to improve the
+                                    dimensionality.
+                                </div>
+                                <div class="card-btns">
+                                    <span class="github-icon">
+                                        <a href="https://github.com/jatinkarthik-tripathy/HRV" target="_blank">
+                                            <i class="fab fa-github-square"></i>
+                                        </a>
                                     </span>
                                 </div>
                             </div>
