added content to about page and added cv download

--- a/index.html
+++ b/index.html
@@ -46,11 +46,16 @@
                 </div>
                 <div class="seperator"></div>
                 <div class="info">
-                    <div class="info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad iure dignissimos aliquid soluta magni praesentium tenetur suscipit fugiat repellendus veniam debitis natus illum, recusandae eveniet perspiciatis nam ex voluptatibus doloremque
-                        possimus molestiae officiis vero aut. Consequuntur eum facilis ipsam ab corrupti praesentium at amet enim quaerat minima repellat, id, ex architecto pariatur totam quo blanditiis, dolore repellendus et. Ipsam iusto alias perspiciatis
-                        necessitatibus, ipsa delectus ipsum nulla placeat totam aliquam dicta optio dolor iste sapiente unde cupiditate voluptatum autem itaque ad corrupti expedita minus voluptatibus? Aut in exercitationem quas sapiente recusandae? Enim
-                        repudiandae alias eum unde maiores soluta nostrum itaque?</div>
-                    <div class="dwnld-cv">Download CV</div>
+                    <div class="info-text">Hey! Im Jatin and im currently pursuing my undergrad in CSE in India. Needless to say, i love the different possiblities and oppurtunities that CSE provides and that sort of transaltes to a hobby for me to mess around and build new
+                        things. I have a very keen interest in the messing around with Neural Nets, specifically in the field of Natural Language Processing. My dream can be put quite simply, i want to re-create an entity which behaves like a normal human,
+                        well as close as posible. To find out more about the specifics, please have a look at my CV
+                    </div>
+                    <div class="dwnld-cv">
+                        <a href="Jatin's CV.pdf" download="Jatin_CV.pdf">
+                            Download CV
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -73,7 +78,7 @@
                         <p>Tensorflow</p>
                     </div>
                     <div class="piechart">
-                        <div class="pie" data-pie='{ "percent": 80, "colorSlice": "#ff7f50", "time": 30, "fontWeight": 600, "fontColor": "#ffffff" , "size": "100" }'>
+                        <div class="pie" data-pie='{ "percent": 70, "colorSlice": "#ff7f50", "time": 30, "fontWeight": 600, "fontColor": "#ffffff" , "size": "100" }'>
                         </div>
                         <p>App Dev</p>
                     </div>
@@ -327,8 +332,7 @@
                                 </div>
                                 <div class="card-btns">
                                     <span class="github-icon">
-                                        <a href="https://github.com/jatinkarthik-tripathy/FPP-Jumper"
-                                            target="_blank">
+                                        <a href="https://github.com/jatinkarthik-tripathy/FPP-Jumper" target="_blank">
                                             <i class="fab fa-github-square"></i>
                                         </a>
                                     </span>
@@ -352,8 +356,7 @@
                                 </div>
                                 <div class="card-btns">
                                     <span class="github-icon">
-                                        <a href="https://github.com/jatinkarthik-tripathy/Block-Jumper"
-                                            target="_blank">
+                                        <a href="https://github.com/jatinkarthik-tripathy/Block-Jumper" target="_blank">
                                             <i class="fab fa-github-square"></i>
                                         </a>
                                     </span>
