--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         well as close as posible. To find out more about the specifics, please have a look at my CV
                     </div>
                     <div class="dwnld-cv">
-                        <a href="Jatin's CV.pdf" download="Jatin_CV.pdf">
+                        <a href="Jatin's CV(2).pdf" download="Jatin_CV.pdf">
                             Download CV
                         </a>
                     </div>
