--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,10 @@
   <link rel="manifest" href="manifest.json">
 
   <script>
+      window.addEventListener('beforeinstallprompt', function (e) {
+        e.preventDefault();
+        return false;
+    });
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
   </script>
