--- a/web/index.html
+++ b/web/index.html
@@ -26,10 +26,7 @@
   <meta name="apple-mobile-web-app-title" content="portfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
-
-  <title>portfolio</title>
+  <title>JKT's Portfolio</title>
 
   <script>
     // The value below is injected by flutter build, do not touch.
