--- a/index.html
+++ b/index.html
@@ -26,14 +26,11 @@
   <meta name="apple-mobile-web-app-title" content="portfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
-
-  <title>portfolio</title>
+  <title>JKT's Portfolio</title>
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2777680426";
+    const serviceWorkerVersion = "494784488";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
